@@ -2,7 +2,8 @@ VL Information (c) 2002 codemastr (Dominick Meglio) [codemastr@unrealircd.com]
 
 Protocol       Version
 ------------------------------------------------------------------------------------------------
-2309           3.2.6, 3.2.7, 3.2.8, 3.2.9
+2310           3.2.9
+2309           3.2.6, 3.2.7, 3.2.8
 2308           3.2.5
 2307           3.2.4
 2306           3.2.3
